# CCTV-human-tracking

./: .gitignore  Dockerfile  Makefile  README.md  app.py  main.py  main_yolo.ipynb  pyproject.toml  tmp.py
.github/workflows/: ci.yml
detection/: yolo.py
tracking/: deepsort.py
