[project]
name = "cctv-human-tracking"
version = "0.1.0"
description = "CCTV Human Tracking using YOLO and DeepSORT"
authors = [
    {name = "Dmitrii Tikhanovskii",email = "dimont200246@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "opencv-python>=3.0",
    "numpy>=1.24.4",
    "boxmot",
    "torch>=2.0.0,<3.0.0",
    "torchvision>=0.15.0",
    "setuptools",
    "ultralytics>=8.3.119,<9.0.0",
    "streamlit==1.24.0",
    "watchdog>=3.0.0",
    "asyncio>=3.4.3",
    "nest-asyncio>=1.5.8"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "detection" },
    { include = "tracking" }
]

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
flake8 = "^7.0.0"
flake8-pyproject = "1.2.3"
mypy = "^1.4.1"
pylint = "^3.2"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["detection", "tracking"]

[tool.flake8]
max-line-length = 88
ignore = "E203,W503"
exclude = ["__pycache__", ".github", "datasets", "output", "weights"]


[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = "(__pycache__|.github|datasets|output|weights)"

[tool.pylint."DESIGN"]
max-args = 15
max-positional-arguments = 10

[tool.pylint.messages_control]
disable = ["too-few-public-methods", "no-member", "too-many-locals", "too-many-branches", "too-many-statements"]